added tour api and swagger
