# storage/api-docs/api-docs.json
@@ -149,6 +149,129 @@
                 ]
             }
         },
+        "/api/v1/travels/{travel:slug}/tours": {
+            "get": {
+                "tags": [
+                    "Api v1 - Tours"
+                ],
+                "summary": "Retrieve tours for a specific travel",
+                "description": "Get a list of tours for a specific travel based on the provided filters",
+                "operationId": "a1084137b606dfdde9b1efe97ee047d1",
+                "parameters": [
+                    {
+                        "name": "travel",
+                        "in": "path",
+                        "description": "Slug of the travel to retrieve tours for",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "priceFrom",
+                        "in": "query",
+                        "description": "Minimum price for filtering tours",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "priceTo",
+                        "in": "query",
+                        "description": "Maximum price for filtering tours",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "dateFrom",
+                        "in": "query",
+                        "description": "Minimum starting date for filtering tours",
+                        "schema": {
+                            "type": "string",
+                            "format": "date"
+                        }
+                    },
+                    {
+                        "name": "dateTo",
+                        "in": "query",
+                        "description": "Maximum ending date for filtering tours",
+                        "schema": {
+                            "type": "string",
+                            "format": "date"
+                        }
+                    },
+                    {
+                        "name": "sortBy",
+                        "in": "query",
+                        "description": "Field to sort the tours by",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "sortOrder",
+                        "in": "query",
+                        "description": "Sorting order ('asc' or 'desc')",
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "asc",
+                                "desc"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of tours for the specified travel"
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    }
+                }
+            }
+        },
+        "/api/v1/travels/{travel:slug}/tour": {
+            "post": {
+                "tags": [
+                    "Api v1 - Tours"
+                ],
+                "summary": "Create a new tour for a travel",
+                "description": "Store a newly created tour for a specific travel in the database",
+                "operationId": "5814af6430b23edaa8bcdfdba62bf1ea",
+                "parameters": [
+                    {
+                        "name": "travel",
+                        "in": "path",
+                        "description": "Slug of the travel to associate the tour with",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {}
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Tour created successfully"
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/v1/travels": {
             "get": {
                 "tags": [
@@ -156,7 +279,7 @@
                 ],
                 "summary": "Get all travels",
                 "description": "Retrieve a list of all travels",
-                "operationId": "getAllTravels",
+                "operationId": "bfe3c61041966f70bfcafc8019bd7fd4",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -186,6 +309,74 @@
                                 }
                             }
                         }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Api v1 - Travels"
+                ],
+                "summary": "Create a new travel",
+                "description": "Store a newly created travel in the database",
+                "operationId": "d0fcc48b850cfec0e0b841d132b924fa",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {}
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Travel created successfully"
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/travels/{travel:slug}": {
+            "put": {
+                "tags": [
+                    "Api v1 - Travels"
+                ],
+                "summary": "Update a travel",
+                "description": "Update an existing travel in the database base on the give slug",
+                "operationId": "19f184c137c5db272277078b85da4a36",
+                "parameters": [
+                    {
+                        "name": "travel",
+                        "in": "path",
+                        "description": "ID of the travel to update",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {}
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Travel updated successfully"
+                    },
+                    "422": {
+                        "description": "Validation error"
                     }
                 },
                 "security": [
